realizat uploadul de fisiere pe Project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.http.multipart.max-file-size=44Mb
+spring.http.multipart.max-request-size=44Mb
+
+upload.folder=D:\\projects
+upload.folderSep=\\
