--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 3000 --proxy-config proxy.conf.json",
+    "start": "ng serve --port 80 --proxy-config proxy.conf.json",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
@@ -23,7 +23,10 @@
     "bootstrap": "^3.3.7",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
+    "ng2-bs3-modal": "^0.10.4",
     "ng2-charts": "^1.5.0",
+    "ng2-social-login": "^2.0.5",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
